opam-version: "2.0"
maintainer: "Mark Elvers <mark.elvers@tunbury.org>"
authors: "Mark Elvers <mark.elvers@tunbury.org>"
homepage: "https://github.com/mtelvers/ocaml-imapd"
bug-reports: "https://github.com/mtelvers/ocaml-imapd/issues"
license: "ISC"
build: [["pkg-config" "--exists" "pam"]]
depends: ["conf-pkg-config" {build}]
depexts: [
  ["libpam0g-dev"] {os-distribution = "ubuntu"}
  ["libpam0g-dev"] {os-distribution = "debian"}
  ["pam-devel"] {os-distribution = "fedora"}
  ["pam-devel"] {os-distribution = "centos"}
  ["linux-pam"] {os = "macos" & os-distribution = "homebrew"}
]
synopsis: "Virtual package relying on PAM"
description: "This package can only install if PAM is installed on the system."
