(test
 (name test_types)
 (libraries imap_types alcotest))

(test
 (name test_parser)
 (libraries imap_parser alcotest))

(test
 (name test_auth)
 (libraries imap_auth alcotest))

(test
 (name test_storage)
 (libraries imap_storage alcotest eio_main))

(test
 (name test_server)
 (libraries imap_types imap_parser alcotest))
